# TS-Django-Seller-Marketplace

./: .flake8  README.md  models.py  pyproject.toml
base/: urls.py
base/templates/: base.html  index.html
marketplace/: form.py  models.py  tests.py  urls.py  views.py
marketplace/migrations/: 0001_initial.py  0002_auto_20210608_2044.py  0003_auto_20210608_2050.py
marketplace/templates/: marketplace.html  marketplacesForm.html  viewMarketplace.html
project/: settings.py  urls.py
seller/: form.py  models.py  tests.py  urls.py  views.py
seller/migrations/: 0001_initial.py  0002_auto_20210609_1354.py  0003_auto_20210609_1840.py
seller/templates/: seller.html  seller_form.html  view_seller.html
