[tool.poetry]
name = "ts-django-seller-marketplace"
version = "0.1.0"
description = ""
authors = ["william villani stiehler <william.stiehler@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
flake8 = "^3.9.2"
psycopg2-binary = "^2.8.6"
postgres = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
